# server/api/openapi.yaml
@@ -734,6 +734,11 @@ paths:
           schema:
             type: string
             format: uuid
+        - name: shiftSeparation
+          in: query
+          required: true
+          schema:
+            type: integer
       responses:
         204:
           description: Successful
